[tool.poetry]
name = "bounce"
version = "0.1.0"
description = ""
authors = ["Cameron Goodhue"]
package-mode = false

[[tool.poetry.source]]
name = "standard"
url = "https://pypi.org/simple"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.6"
uvicorn = "^0.32.1"
pre-commit = "^3.2.2"
sqlalchemy = "^2.0"

[tool.poe.tasks]
test = "pytest tests"
quality = "pre-commit run --all-files"
